# rusteam

./: Cargo.toml  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml
.github/workflows/: build.yml
migrations/: V0001__init.sql  V0002__drop_appid_constraint.sql  V0003__bigger_id_type_update_field_names.sql  V0004__played_game_last_played.sql  V0005__bigger_app_id_played_game.sql  V0006__noted_game_notion_id.sql  V0007__steam_details.sql  V0008__noted_game_state.sql  V0009__game_details_blacklist.sql  V0010__game_details_add_release_estimate.sql  V0011__create_wishlist_table.sql  V0012__create_view_incremental_playtimes.sql  V0013__create_table_release_update.sql  V0014__create_table_ignored_game.sql
queries/: full-wishlist.sql  latest-played.sql  latest-releases.sql  most-played.sql  played-games-over-time.sql  released-by-rating.sql  released-wishlisted.sql  unplayed-purchases.sql  upcoming-summary.sql  upcoming-wishlisted.sql  wall-of-shame.sql
queries/calculated-columns/: game.sql
queries/diag/: future-release-date.sql  missing-release-date.sql
resources/test/steam/: app-details-response-1.json
scripts/: _await_service.sh  bootstrap.sh  test.sh
src/: cli.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  notify.rs  notion.rs  steam.rs
src/cli/: ignore.rs  sync.rs  wishlist.rs
src/db/: migrations.rs  repo.rs  sync.rs
src/models/: game.rs  notion.rs  steam.rs
src/models/steam/: tests.rs
src/notion/: conv.rs
src/steam/: conv.rs
superset/: docker-compose.yml
superset/docker/: requirements-local.txt
test/: config.toml  test-config.toml
tests/: ignore.rs  steam.rs  sync.rs
tests/utils/: mod.rs
(+5 files in other folders)
