[package]
name = "rusteam"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
notion = "0.5.1"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
serde-inline-default = "0.2.0"
strsim = "0.10.0"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
toml = "0.8.8"
ureq = { version = "2.9.1", features = ["json"] }
