[package]
name = "rusteam"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["now", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
futures = "0.3.30"
home = "0.5.9"
itertools = "0.13.0"
notion = "0.5.1"
postgres-types = { version = "0.2.6", features = ["with-chrono-0_4"] }
refinery = { version = "0.8.12", features = ["tokio-postgres"] }
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
serde-inline-default = "0.2.0"
strsim = "0.10.0"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
toml = "0.8.8"
ureq = { version = "2.9.1", features = ["json"] }

[dev-dependencies]
mockall = "0.13.0"
wiremock = "0.6.2"
